# TekDAQC_Zephyr

./: .gitignore  CMakeLists.txt  prj.conf
STM32Cube/: STM32Cube.ioc
boards/arm/tekdaqc_e/: Kconfig.board  Kconfig.defconfig  board.cmake  tekdaqc_e.dts  tekdaqc_e.yaml  tekdaqc_e_defconfig
civetweb/include/: libc_extensions.h
civetweb/src/: libc_extensions.c
modules/tekdaqc/: Kconfig.tekdaqc
modules/tekdaqc/drivers/: CMakeLists.txt  Kconfig
modules/tekdaqc/drivers/adc/: CMakeLists.txt  Kconfig
modules/tekdaqc/drivers/adc/ads1256/: CMakeLists.txt  Kconfig  ads1256.c  ads1256.h
modules/tekdaqc/zephyr/: module.yml
src/: dhcp.h  main.c  mdns_service.h  network.c  network.h  rtc.c  rtc.cpp  rtc.h  sdcard.c  sdcard.h  sntp.h  timestamp.h  webserver.c  webserver.h
src/web/: http_handler.c  http_handler.h  mime.h  server.c  server.h
